# PlaidBridgeOpenBankingApi

./: .coverage  .coveragerc  .dockerignore  .editorconfig  .env  .env.example  .eslintrc.js  .githubworkflowsci.yml  .gitignore  .gitmodules  .pre-commit-config.yaml  .python-version  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT_TEST_REPORT.md  Dockerfile  ENTERPRISE_DEPLOYMENT_GUIDE.md  Example_Module.py  GITHUB_SECRETS_SETUP_GUIDE.md  LICENSE  LICENSE_PROPRIETARY.txt  Makefile  OWNERSHIP_NOTICE.md  OpenBankingContainerAPI  PLAID SECRET ID  PR.md  Plaid Client ID  Procfile  README.md  README_v2.md  Security Analysis  TREASURY_PRIME_API_KEY  __init__.py  account_info.html  add_extend_existing.py  alembic.ini  app.json  app.log.1  app.py  appsetting.json  (+70 more)
.github/: dependabot.yml  mkdocs.yml
Dockerfile/: Debian  OpenBankingContainerApi  PlaidBridgeAPI_Dockerfile  financialpowerhouseapi_Dockerfile  todo-csharp-sql-swa-func
PlaidBridgeOpenBankingApi/: .coverage  .coveragerc  .env.example  .gitignore  AGENTS.md  CREDENTIAL_ROTATION_GUIDE.md  Copilot.md  FLASK_SECURITY_AUDIT.md  NEXT_STEPS.md  Procfile  README.md  alembic.ini  backup_complaint_log.sql  docker_script.py  example_module.py  inspect_final_fk.py  mock_api.py  nginx.conf  pay.py  pytest.ini  requirements.txt  test_app_endpoints.py  test_example.py  wsgi.py
app/: README.md  __init__.py  boot_guards.py  cli.py.bak  compliance.py  compliance_ai.py  config.py  constants.py.bak  email_routes.py  extensions.py  flask_app.py  models.py  models.pyi.bak  models_stubs.pyi  plaid_api.py  requirements.txt  routes.py  run.py  security_utilities.py  tracing.py  utils.py  utils.py.bak  utils_legacy.py  utils_top_level.py  wsgi.py
app.test.js/: ___tests___
azure/: azuredeploy.son
azure-functions-core-tools/: artifactsconfig.json
backup/: test_app.py
docs/: 01-system-architecture.md  02-naming-conventions.md  03-backend-architecture.md  04-database-erd.md  05-developer-onboarding.md  06-ci-cd-pipeline.md  07-operator-handbook.md  08-release-notes.md  09-api-reference.md  10-openapi.yaml  11-monorepo-architecture-diagram.md  12-mobile-architecture.md  README.md  index.md  operator-handbook-pdf.md  theme_overrides.css
(+967 files in other folders)
