[tool.poetry]
name = "PlaidBridgeOpenBankingApi"
version = "3.12-slim"
description = "A Python project integrating with Plaid’s API to support Open Banking functionalities"
authors = ["srpihhllc <srpollardsihhllc@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12-slim"

requests = "^2.32.0"
flask = "^2.0.1"
python-dotenv = "^0.19.0"
